Quick fix: force styles on iOS (prevent default styles)

--- a/scss/perlovs/layout/_search.scss
+++ b/scss/perlovs/layout/_search.scss
@@ -21,6 +21,7 @@
 	margin: 0;
 	padding: .2em 3em .2em .5em;
 	width: 100%;
+	-webkit-appearance: none;
 
 	&:focus, &:active {
 		border: 1px solid #EEEEEE;
